removed VMArgs because no support for 8.0